# O-RPLY

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
etc/: convert.c  input.ply
include/: rplymemory.h
lib/: CMakeLists.txt
lib/include/: rplymemory.h
lib/src/: rply.c
simple_loader/: CMakeLists.txt
simple_loader/include/: PLYLoader.hpp
simple_loader/src/: PLYLoader.cpp
src/: rply.c
tests/: CMakeLists.txt  load_and_store_ply.cpp
tools/: CMakeLists.txt  dump.c  sconvert.c
